test/errors/type/str/tobyte.yasl

mt.lookup('', .tobyte)(1)
